<resources>
    <string name="app_name">Help Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="zopim_chat_account_key">RJa0yLD7rqhajWYrUBLgKC2u8uBuOjpm</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="google_maps_key">AIzaSyD_acSGWf6flgHO5t7LLRYRjKVYS19C9s0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter Message</string>
    <string name="privacy">Privacy</string>
    <string name="manage_the_date_you_share_with_us">Manage the date you share with us</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Control what messages you receive from us</string>
    <string name="location">Location</string>
    <string name="location_descriptions">Update your location sharing preferences.</string>
    <string name="logout">Logout</string>
    <string name="see_you_later">See you later</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="update_profile">Update Profile</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="password_limit">Password</string>
    <string name="contact_limit">Mobile (min 11digits)</string>
    <string name="register">Register</string>
    <string name="login_text">Login</string>
    <string name="verification_string">Verification Code Has Been Sent</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend_code">Resend Code</string>
    <string name="token_prefix">Token: %s</string>
    <string name="handle_notification_now">We are going to do something with our notification right now!</string>
    <string name="channel_name">notification channel</string>
    <string name="channel_description">notification channel description</string>
    <string name="submit">Submit</string>
    <string name="rate_me">Rate Me!</string>
    <string name="password_not_entered">Password Not Entered</string>
    <string name="weak_password">Weak Password</string>
    <string name="medium_password">Medium Password</string>
    <string name="strong_password">Strong Password</string>
    <string name="very_strong_password">Very Strong Password</string>
</resources>
