<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.helpfinders.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/register_applogo"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:src="@drawable/may_i_help_you"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/txt_first_name"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:background="#90cecece"
                android:hint="@string/first_name"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:layout_marginTop="40dp"/>

            <EditText
                android:id="@+id/txt_last_name"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:background="#90cecece"
                android:hint="@string/last_name"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_marginTop="10dp"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:layout_gravity="center_horizontal"
                android:background="#90cecece"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/txt_contact_number"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="9dp"
                android:background="#90cecece"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:maxLength="11"
                android:hint="@string/contact_limit"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/txt_location"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="9dp"
                android:background="#90cecece"
                android:drawableLeft="@drawable/ic_location_black"
                android:drawableStart="@drawable/ic_location_black"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:hint="Shop#, Street#, City, Country"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp" />

            <Spinner
                android:id="@+id/service_dropdown"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginTop="9dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:background="@drawable/dropdown_background"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="9dp"
                android:background="#90cecece"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password_limit"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp" />

            <SeekBar
                android:id="@+id/password_strength_seekbar"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:progress="0"/>

            <TextView
                android:id="@+id/tv_password_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invalid Password"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="9dp"
                android:background="#90cecece"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#545454"
                android:textColorHint="#545454"
                android:textSize="12dp" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical">


                <CheckBox
                    android:id="@+id/checkbox_service_provider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:id="@+id/tv_rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:textSize="12sp"
                    android:text="Are you Service Provider?"
                    android:textColor="@color/black" />



            </LinearLayout>
            <RelativeLayout
                android:id="@+id/rel_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/user_signup_btn"
                    android:layout_alignLeft="@+id/user_signup_btn"
                    android:layout_alignEnd="@id/user_signup_btn"
                    android:layout_alignRight="@id/user_signup_btn"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="11dp"
                    android:elevation="7dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/user_signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000"
                    android:text="@string/register"
                    android:textColor="#ffffff"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:padding="16dp"/>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#000000"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>